@@ -120,6 +120,12 @@ silently ignored if
 .B \-k
 is not present too.
 .TP
+\fB\-I\fR, \fB\-\-inode\fR
+For the name space
+.B file
+let all comparisions be based on the inodes of the specified file(s)
+and never on the file names even on network based file systems.
+.TP
 \fB\-l\fR, \fB\-\-list\-signals\fR
 List all known signal names.
 .TP
