@@ -11,6 +11,7 @@ typedef unsigned short opt_type;
 #define OPT_USER 64
 #define OPT_ISMOUNTPOINT 128
 #define OPT_WRITE 256
+#define OPT_ALWAYSSTAT 512
 
 struct procs {
 	pid_t pid;
@@ -86,7 +87,7 @@ struct mount_list {
 	struct mount_list *next;
 };
 
-#if defined (__GNUC__) && defined(__OPTIMIZE__) && !defined (__CYGWIN__)
+#if defined (__GNUC__) && defined(WITH_MOUNTINFO_LIST)
 # include "lists.h"
 typedef struct mntinfo_s {
     list_t   this;
@@ -95,6 +96,8 @@ typedef struct mntinfo_s {
     size_t   nlen;
     char  *mpoint;
 } mntinfo_t;
+#else
+# undef WITH_MOUNTINFO_LIST
 #endif
 
 #define NAMESPACE_FILE 0
